--- a/main.css
+++ b/main.css
@@ -4,21 +4,32 @@ html {
 	background-attachment: fixed;
 }
 
-h1 {
+body {
 	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+}
+
+h1 {
 	font-size: 48px;
 }
 
 h2 {
-	font-family: 'Open Sans', sans-serif;
+	font-weight: normal;
 }
 
-h1.pageTitle {
+h3 {
+	font-weight: normal;
+}
+
+.logo {
 	margin-bottom: 0px;
 }
 
-h2.pageTitle {
+.logoText {
 	font-size: 24px;
 	margin-top: 0px;
-	font-weight: normal;
 }
+
+.pages {
+/*	font-family: 'Open Sans', sans-serif;
+*/}
