--- a/main.css
+++ b/main.css
@@ -9,6 +9,16 @@ body {
 	font-weight: 400;
 }
 
+header {
+	display: inline;
+	width: 100%;
+}
+
+header * {
+	margin: 10px 30px;
+	background-color: white;
+}
+
 h1 {
 	font-size: 48px;
 }
@@ -17,8 +27,8 @@ h2 {
 	font-weight: normal;
 }
 
-h3 {
-	font-weight: normal;
+#pageTitle {
+	display: inline-block;
 }
 
 .logo {
@@ -26,10 +36,26 @@ h3 {
 }
 
 .logoText {
-	font-size: 24px;
 	margin-top: 0px;
 }
 
-.pages {
-/*	font-family: 'Open Sans', sans-serif;
-*/}
+.navBar * {
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+	margin: 0;
+}
+
+.navBar {
+	display: inline-block;
+	position: absolute;
+	top: 80px;
+	right: 0;
+}
+
+.navBar a {
+	text-decoration: none;
+	color: black;
+	display: inline;
+	font-size: 20px;
+}
