--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,3 +65,19 @@ h2 {
 	display: inline;
 	font-size: 20px;
 }
+
+#banner {
+	text-align: center;
+	background-color: green;
+	height: 300px;
+	margin-top: 144px;
+}
+
+#fox {
+	text-align: center;
+	background-color: blue;
+}
+
+#fox img {
+	display: inline-block;
+}
