moved fox to projects page

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -65,3 +65,17 @@ h2 {
 	display: inline;
 	font-size: 20px;
 }
+
+#fox {
+	text-align: center;
+	margin-top: 144px;
+}
+
+#fox img {
+	display: inline-block;
+	margin-bottom: 0;
+}
+
+#fox p {
+	font-size: 30px;
+}
