--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,8 +67,10 @@ h2 {
 }
 
 #banner {
+	display: block;
 	text-align: center;
 	background-color: green;
 	height: 300px;
 	margin-top: 144px;
+	width: 995px;
 }
