--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -105,7 +105,11 @@ input[type=text], textarea {
 #response {
 	display: block;
 	text-align: center;
-	/*background-color: green;*/
 	margin-top: 144px;
 	padding-top: 100px;
+}
+
+#fox {
+	display: block;
+	text-align: center;
 }
